--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -1,4 +1,5 @@
 {% extends base_template %}
+{% load eva_tags %}
 {% load static %}
 {% load humanize %}
 <title>{% block titulo %}Flujo de Caja{% endblock %}</title>
@@ -19,6 +20,8 @@
                 <a class="far far fa-times-circle" href="#" onclick="volverAtras()" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Volver"></a>
             </h1>
         </div>
+        <input hidden id="id_contrato_detalle" value="{{ contrato.id }}{{ proceso.id }}">
+        <input hidden id="id_tipo_detalle" value="{{ tipo }}">
         <div class="row">
             <div class="col-xl-12">
                 <div id="panel-1" class="panel">
@@ -42,6 +45,15 @@
                                 <h3>
                                     <b>Total Egresos: </b>{{ egresos|intcomma }}
                                 </h3>
+                            </div>
+                        </div>
+                        <div class="panel-hdr">
+                            <div class="col-lg-8 col-md-4 col-sm-2"></div>
+                            <div class="col-lg-2 col-md-4 col-sm-5" style="float: right;">
+                                {% select_tag anios 'filtro_anio_id' anios.first.campo_texto value=anio_seleccion primer_valor=True primer_campo_valor=anios.first.campo_valor %}
+                            </div>
+                            <div class="col-lg-2 col-md-4 col-sm-5" style="float: right;">
+                                {% select_tag meses 'filtro_mes_id' meses.first.campo_texto value=mes_seleccion primer_valor=True primer_campo_valor=meses.first.campo_valor %}
                             </div>
                         </div>
                     {% endif %}
@@ -125,4 +137,5 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js'%}"></script>
     <script src="{% static 'Financiero/js/FlujoCaja/confirmarEliminarFlujoCajaDetalle.js' %}"></script>
     <script src="{% static 'Financiero/js/FlujoCaja/volverAtras.js' %}"></script>
+    <script src="{% static 'Financiero/js/FlujoCaja/detalleFlujoCaja.js' %}"></script>
 {% endblock %}
