--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -156,13 +156,13 @@
                                                             <div class="form-group" id="div_aiu" style="display: none">
                                                                 <div class="form-row">
                                                                     <div class="col-md-4">
-                                                                        {% input_number_tag 'porcentaje_a' 'Porcentaje A' placeholder="Ingrese el porcentaje A"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_a mensaje_validacion='Por favor ingrese el porcentaje A' invalido=errores.porcentaje_a %}
+                                                                        {% input_number_tag 'porcentaje_a' 'Porcentaje de Administración' placeholder="Ingrese el porcentaje A"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_a mensaje_validacion='Por favor ingrese el porcentaje A' invalido=errores.porcentaje_a %}
                                                                     </div>
                                                                     <div class="col-md-4">
-                                                                        {% input_number_tag 'porcentaje_i' 'Porcentaje I' placeholder="Ingrese el porcentaje I"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_i mensaje_validacion='Por favor ingrese el porcentaje I' invalido=errores.porcentaje_i %}
+                                                                        {% input_number_tag 'porcentaje_i' 'Porcentaje de Imprevistos' placeholder="Ingrese el porcentaje I"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_i mensaje_validacion='Por favor ingrese el porcentaje I' invalido=errores.porcentaje_i %}
                                                                     </div>
                                                                     <div class="col-md-4">
-                                                                        {% input_number_tag 'porcentaje_u' 'Porcentaje U' placeholder="Ingrese el porcentaje U"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_u mensaje_validacion='Por favor ingrese el porcentaje U' invalido=errores.porcentaje_u %}
+                                                                        {% input_number_tag 'porcentaje_u' 'Porcentaje de Utilidad' placeholder="Ingrese el porcentaje U"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.porcentaje_u mensaje_validacion='Por favor ingrese el porcentaje U' invalido=errores.porcentaje_u %}
                                                                     </div>
                                                                 </div>
                                                             </div>
