--- a/EVA/templates/EVA/_general_tags/_input_general_tag.html
+++ b/EVA/templates/EVA/_general_tags/_input_general_tag.html
@@ -21,9 +21,6 @@
     </div>
 {% endif %}
 {% endif %}
-{% if mensaje_validacion %}
-     <div class="invalid-tooltip {% if modal %}invalid-tooltip-modal{% endif %}">{{ mensaje_validacion }}</div>
-{% endif %}
 {% if tipo == 'checkbox' %}
             <label for="{{ nombre }}_id" class="custom-control-label">{{ texto_label}}</label>
         </div>
@@ -33,8 +30,11 @@
     <br>&nbsp;&nbsp;
     {% for opcion in opciones %}
     &nbsp;&nbsp;<div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" class="custom-control-input" id="{{ opcion.texto }}_id" name="{{ nombre }}" value="{{ opcion.valor }}" required>
+        <input type="radio" class="custom-control-input" id="{{ opcion.texto }}_id" name="{{ nombre }}" value="{{ opcion.valor }}" required {% if opcion.valor == valor %}checked{% endif %}>
         <label class="custom-control-label" for="{{ opcion.texto }}_id">{{ opcion.texto }}</label>
     </div>
     {% endfor %}
+{% endif %}
+{% if mensaje_validacion %}
+     <div class="invalid-tooltip {% if modal %}invalid-tooltip-modal{% endif %}">{{ mensaje_validacion }}</div>
 {% endif %}
