--- a/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/modal-crear-editar.html
@@ -34,6 +34,11 @@
                     {% select_tag categorias_movimientos 'categoria_movimiento_id' 'Seleccione una categoría de movimiento' texto_label="Categoría de Movimiento" value=sub_mov.categoria_movimiento_id required="" modal=True mensaje_validacion='Por favor seleccione una categoría de movimiento.' invalido=errores.categoria_movimiento %}
                 </div>
                 <br>
+                <div>
+                    {% input_select_radio_tag 'solo_contrato_proceso' '' opciones=opciones_solo_contrato_proceso value=solo_contrato_proceso required="" modal=True mensaje_validacion='Por favor seleccione una opción' %}
+                </div>
+                <br>
+                <br>
                 <div class="form-row">
                     <div class="col-md-6">
                         {% input_checkbox_tag 'protegido' 'Protegido' value=sub_mov.protegido  %}
