--- a/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
@@ -125,12 +125,17 @@
                             <div class="col-12">
                                 <div class="p-3">
                                     <h2 class="mb-0 fs-xl">
-                                        <strong> Supervisión e Interventoría </strong>
+                                        {% if supervisores %}
+                                            <strong> Supervisores </strong>
+                                        {% else %}
+                                            <strong> Interventores </strong>
+                                        {% endif %}
                                     </h2>
                                 </div>
                             </div>
                             <div class="p-3">
                                 <h5>
+                                    {% if supervisores %}
                                     <small class="mt-0 mb-3 text-muted">
                                         <b>Supervisores: </b>
                                         {% for sup in supervisores %}
@@ -138,6 +143,8 @@
                                             - {{ sup.tercero }}
                                         {% endfor %}
                                     </small>
+                                    {% endif %}
+                                    {% if interventores %}
                                     <small class="mt-0 mb-3 text-muted">
                                         <b>Interventores: </b>
                                         {% for int in interventores %}
@@ -145,6 +152,7 @@
                                             - {{ int.tercero }}
                                         {% endfor %}
                                     </small>
+                                    {% endif %}
                                 </h5>
                             </div>
                         </div>
