--- a/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
@@ -16,7 +16,7 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col-12">
-                                {% input_number_tag 'valor_amortizacion' "Valor amortización:" placeholder="Ingrese valor amortización" required="" min="0.00" max="9999999999.99" step="0.01" %}
+                                {% input_currency_tag 'valor_amortizacion' "Valor amortización:" placeholder="Ingrese valor amortización" required="" min="0.00" max="9999999999.99" step="0.01" %}
                             </div>
                         </div>
                     </div>
