--- a/Financiero/templates/Financiero/Facturacion/crear_factura.html
+++ b/Financiero/templates/Financiero/Facturacion/crear_factura.html
@@ -124,5 +124,7 @@
      <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/formplugins/inputmask/inputmask.bundle.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/conversiones.js' %}"></script>
     <script src="{% static 'Financiero/js/Facturacion/formFactura.js' %}"></script>
 {% endblock scripts%}
