--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -70,7 +70,7 @@
                                                             </td>
                                                             <td>{{ consecutivo.detalle}}</td>
                                                             <td>{{ consecutivo.destinatario }}</td>
-                                                            <td>{{ consecutivo.usuario }}</td>
+                                                            <td>{{ consecutivo.usuario.get_full_name }}</td>
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
