--- a/TalentoHumano/templates/TalentoHumano/_elements/_modal_seleccion_empresa.html
+++ b/TalentoHumano/templates/TalentoHumano/_elements/_modal_seleccion_empresa.html
@@ -18,8 +18,8 @@
                     <div class="form-row">
                         {% for empresa in empresas %}
                             <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div id="div_empresa_{{ empresa.id }}" class="opacidad_05">
-                                    <img class="logo-nav imagen_empresa" onclick="adicionarSeleccionEmpresa({{ empresa.id }})" src="{{ empresa.logo }}">
+                                <div id="div_empresa_{{ empresa.id }}" class="opacidad_05" onclick="adicionarSeleccionEmpresa({{ empresa.id }})">
+                                    <img class="logo-nav seleccionEmpresaGlobal" src="{{ empresa.logo }}">
                                     <div style="height: 31px"><h3 class="text-logo h3_texto_imagen"><strong>{{ empresa.nombre }}</strong></h3></div>
                                     <br>
                                 </div>
