--- a/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
@@ -1,5 +1,5 @@
 {% load eva_tags %}
-<form id="famortizacion_factura">
+<form id="famortizacion_factura" novalidate>
     <div class="modal fade"  tabindex="-1" id="agregar_amortizacion_modal" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
