--- a/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
@@ -1,5 +1,5 @@
 {% load eva_tags %}
-<form id="fitem_factura">
+<form id="fitem_factura" novalidate>
     <div class="modal fade"  tabindex="-1" id="agregar_item_modal" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -16,7 +16,7 @@
                     <div class="form-group">
                         <div class="form-row">
                             <div class="col-12">
-                                {% input_general_tag 'titulo_item' texto_label="Ítem:" type="textarea" placeholder="Ingrese el ítem" required="" maxlength="250" %}
+                                {% input_general_tag 'titulo_item' texto_label="Ítem:" type="textarea" placeholder="Ingrese el ítem" required="" maxlength="250" mensaje_validacion="El ítem es requerido"%}
                             </div>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                                 {% input_currency_tag 'valor_unitario' "Valor unitario:" placeholder="Ingrese valor unitario" required="" min="0.01" max="9999999999.99" step="0.01" %}
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4">
-                                {% input_decimal_tag 'cantidad' "Cantidad:" placeholder="Ingrese cantidad" required="" min="0.01" max="9999999999.99" step="0.01" %}
+                                {% input_number_format_tag 'cantidad' "Cantidad:" placeholder="Ingrese cantidad" required="" min="0.01" max="9999999999.99" step="0.01" %}
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4">
                                 {% select_tag impuestos 'impuesto' 'Seleccione el impuesto' texto_label="Impuesto:" %}
