EVA-125 feat: Se reorganizan campos en el formulario de crear contratos y  los campos de valor del contrato, valor sin y con iva se les activa formato moneda.
Además se hacen correciones en la forma de utilizar las clases form-group y form-row en este mismo formulario.

Queda apendiente habilitar el fomrato modena para los otros campos que apliquen en elñ formulario.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -141,3 +141,7 @@ position: relative;
 .table-td-a-t-e td{
     text-align: end;
 }
+
+.form-group:last-child, .form-group:only-child {
+    margin-bottom: 1.5rem;
+}
