--- a/Administracion/templates/Administracion/_common/_modal_seleccion_empresa.html
+++ b/Administracion/templates/Administracion/_common/_modal_seleccion_empresa.html
@@ -14,11 +14,12 @@
         <div class="modal-body">
             <div class="form-row">
                 {% for empresa in empresas %}
-                    <div class="col-lg-6 col-md-6 col-sm-12" style="text-align: center; position: relative; cursor: pointer; {% if empresa_actual.id != empresa.empresa.id %} opacity: 0.5 {% endif %}"
+                    <div class="col-lg-6 col-md-6 col-sm-12" style="text-align: center; position: relative; cursor: pointer; {% if empresa_actual.id != empresa.id %} opacity: 0.5 {% endif %}"
                          onmouseover="$(this).find('.text-logo').fadeIn(0); $(this).css('opacity','1');"
-                         onmouseleave="$(this).find('.text-logo').fadeOut(0);$(this).css('opacity',{% if empresa_actual.id != empresa.empresa.id %} '0.5' {% else %} '1' {% endif %});">
-                        <img class="seleccionEmpresaGlobal logo-nav" style="position: relative;" onclick="clicEmpresa({{ empresa.empresa.id }})" src="{{ empresa.empresa.logo.url }}" >
-                        <div style="height: 31px"><h3 class="text-logo" style="position: relative; display: none;" ><strong>{{ empresa.empresa.nombre }}</strong></h3></div>
+                         onmouseleave="$(this).find('.text-logo').fadeOut(0);$(this).css('opacity',{% if empresa_actual.id != empresa.id %} '0.5' {% else %} '1' {% endif %});"
+                         onclick="clicEmpresa({{ empresa.id }})">
+                        <img class="seleccionEmpresaGlobal logo-nav" style="position: relative;" src="{{ empresa.logo.url }}" >
+                        <div style="height: 31px"><h3 class="text-logo" style="position: relative; display: none;" ><strong>{{ empresa.nombre }}</strong></h3></div>
                         <br>
                     </div>
                 {% endfor %}
