--- a/Financiero/templates/Financiero/Facturacion/_agregar_aiu_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_aiu_modal.html
@@ -13,32 +13,28 @@
                 </div>
 
                 <div class="modal-body">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-12">
-                                {% input_number_format_tag 'porcentaje_administracion' "Administración (%):" placeholder="Ingrese  administración" required="" min="0.00" max="100.00" step="0.01" %}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-12">
-                                {% input_number_format_tag 'porcentaje_imprevistos' "Imprevistos (%):" placeholder="Ingrese % imprevistos" required="" min="0.00" max="100.00" step="0.01" %}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-12">
-                                {% input_number_format_tag 'porcentaje_utilidad' "Utilidad (%):" placeholder="Ingrese % utilidad" required="" min="0.00" max="100.00" step="0.01" %}
-                            </div>
+
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_number_format_tag 'porcentaje_administracion' "Administración (%):" placeholder="Ingrese  administración" required="" min="0.00" max="100.00" step="0.01" %}
                         </div>
                     </div>
 
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_number_format_tag 'porcentaje_imprevistos' "Imprevistos (%):" placeholder="Ingrese % imprevistos" required="" min="0.00" max="100.00" step="0.01" %}
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_number_format_tag 'porcentaje_utilidad' "Utilidad (%):" placeholder="Ingrese % utilidad" required="" min="0.00" max="100.00" step="0.01" %}
+                        </div>
+                    </div>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-pills" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger btn-pills" data-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary btn-pills agregarAIU ">Agregar</button>
                 </div>
             </div>
