--- a/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
@@ -13,17 +13,15 @@
                 </div>
 
                 <div class="modal-body">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-12">
-                                {% input_currency_tag 'valor_amortizacion' "Valor amortización:" placeholder="Ingrese valor amortización" required="" min="0.00" max="9999999999.99" step="0.01" %}
-                            </div>
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_currency_tag 'valor_amortizacion' "Valor amortización:" placeholder="Ingrese valor amortización" required="" min="0.00" max="9999999999.99" step="0.01" %}
                         </div>
                     </div>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-pills" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger btn-pills" data-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary btn-pills agregarAmortizacion ">Agregar</button>
                 </div>
             </div>
