--- a/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
@@ -13,39 +13,35 @@
                 </div>
 
                 <div class="modal-body">
-                    <div class="form-group">
-                        <div class="form-row">
-                            <div class="col-12">
-                                {% input_general_tag 'titulo_item' texto_label="Ítem:" type="textarea" placeholder="Ingrese el ítem" required="" maxlength="250" mensaje_validacion="El ítem es requerido"%}
-                            </div>
+
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_general_tag 'titulo_item' texto_label="Ítem:" type="textarea" placeholder="Ingrese el ítem" required="" maxlength="250" mensaje_validacion="El ítem es requerido"%}
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <div class="form-row">
-                            <div class="col-12">
-                                {% input_general_tag 'descripcion_item' texto_label="Descripcion:" type="textarea" placeholder="(Opcional) Ingrese la descripción del item" maxlength="500" %}
-                            </div>
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_general_tag 'descripcion_item' texto_label="Descripcion:" type="textarea" placeholder="(Opcional) Ingrese la descripción del item" maxlength="500" %}
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-6 col-md-4 col-lg-4">
-                                {% input_currency_tag 'valor_unitario' "Valor unitario:" placeholder="Ingrese valor unitario" required="" min="0.01" max="9999999999.99" step="0.01" %}
-                            </div>
-                            <div class="col-sm-6 col-md-4 col-lg-4">
-                                {% input_number_format_tag 'cantidad' "Cantidad:" placeholder="Ingrese cantidad" required="" min="0.01" max="9999999999.99" step="0.01" %}
-                            </div>
-                            <div class="col-sm-6 col-md-4 col-lg-4">
-                                {% select_tag impuestos 'impuesto' 'Seleccione el impuesto' texto_label="Impuesto:" %}
-                            </div>
+                    <div class="row">
+                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                            {% input_currency_tag 'valor_unitario' "Valor unitario:" placeholder="Ingrese valor unitario" required="" min="0.01" max="9999999999.99" step="0.01" %}
+                        </div>
+                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                            {% input_number_format_tag 'cantidad' "Cantidad:" placeholder="Ingrese cantidad" required="" min="0.01" max="9999999999.99" step="0.01" %}
+                        </div>
+                        <div class="form-group col-sm-6 col-md-4 col-lg-4">
+                            {% select_tag impuestos 'impuesto' 'Seleccione el impuesto' texto_label="Impuesto:" %}
                         </div>
                     </div>
+
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-pills" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger btn-pills" data-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary btn-pills agregarItem ">Agregar</button>
                 </div>
             </div>
